--- a/index.css
+++ b/index.css
@@ -1,18 +1,34 @@
-body {
-    margin: 0;
-    font-family:Georgia, 'Times New Roman', Times, serif
+.editor-button {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+  background-color: red;
+  width: 487px;
+  
+}  
 
-  }
-  /* #toolbar {
-    background-color: brown;
-    width: 700px;
-    height: 200px;
-    display: inline-block;
-  } */
+.text-editor{
+  width: 500px;
+  height: 100px;
+  background-color: white;
+  border: 1px solid red;
+}
 
-  .items{
-    width: 800px; 
-    height: 300px; 
-    display: inline-block;
-    background-color: yellow;
-  }
+.Par{
+text-align: left;
+margin-left: 15px;
+font-size: 24px;
+
+}
+
+.header{
+  align-items: center;
+}
+
+.btn{
+  background-color: slateblue;
+  color: white; 
+  margin: 10px;
+  width: 200px; 
+  height: 30px; 
+}
