--- a/index.css
+++ b/index.css
@@ -1,18 +1,21 @@
 .editor-button {
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: auto auto auto auto auto auto auto auto;
+  /* justify-content: space-between; */
   padding: 10px;
-  background-color: red;
-  width: 487px;
+  grid-gap: 5px;
+  /* background-color: slategray; */
+  width: 100px;
   
 }  
 
 .text-editor{
-  width: 500px;
-  height: 100px;
+  width: 750px;
+  height: 200px;
   background-color: white;
   border: 1px solid red;
 }
+
 
 .Par{
 text-align: left;
@@ -21,14 +24,69 @@ font-size: 24px;
 
 }
 
+.bold {
+  font-weight: bold;
+}
+
+
+.cont{
+  width: 300px;
+  height: 50px;
+  margin-left: 70px; 
+  margin-bottom: 50px; 
+  margin-top: 20px; 
+}
 .header{
   align-items: center;
 }
 
-.btn{
-  background-color: slateblue;
-  color: white; 
-  margin: 10px;
-  width: 200px; 
-  height: 30px; 
+.outcome{
+  background-color: black;
+  color:white;
 }
+
+.btn{
+  background-color: lightblack;
+  color: black; 
+  margin: 5px;
+  width: 80px; 
+  height: 30px; 
+  justify-content: space-between;
+  margin-left: 20px;
+}
+
+.container{
+  display: block;
+  width: 500px;
+  height: 400px; 
+  border: 1px solid black;
+}
+
+.output{
+  width: 300px; 
+  height: 100px; 
+  border: 1px solid red; 
+  margin-left:70px;
+  margin-bottom: 50px;
+
+}
+
+.highlight {
+  background-color: yellow;
+}
+
+strong {
+  font-weight: bold;
+}
+
+em {
+  font-style: italic;
+}
+
+.formatted-text {
+  margin-top: 1rem;
+  border: 1px solid #ccc;
+  padding: 0.5rem;
+  white-space: pre-wrap;
+}
+
